# saxsrs

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml  plan.md
.githooks/: README
include/: saxsrs.h
src/: lib.rs
src/data/: metadata.rs  mod.rs  peak.rs  sample.rs
src/ffi/: mod.rs  runtime.rs  sample.rs  types.rs
src/runtime/: executor.rs  mod.rs  policy.rs  regroup.rs  scheduler.rs
src/stage/: find_peak.rs  mod.rs  process_peak.rs  registry.rs  traits.rs
